--- a/exercise3/index.html
+++ b/exercise3/index.html
@@ -20,11 +20,11 @@
             height: 1000px;
             margin: auto auto auto auto;
             border: 2px solid #000000;
-            background-color:blue;
+            background-color:gray;
         }
         header {
             height: 160px;
-            /* background-image: ; */
+            background-image: url(./images/backgroud.jpeg);
         }
         h1 {
             text-indent: -9999px;
@@ -47,7 +47,7 @@
             margin-right: 40px;
         }
         nav li a {
-            color: #ffffff;
+            color: #eeeeee;
         }
         nav li a:hover, nav li a.current {
             color:#000000;
@@ -76,6 +76,7 @@
         figcaption {
             font-size: 90%;
             text-align: left;
+            color: #000000;
         }
 
         aside {
@@ -89,35 +90,43 @@
             border-bottom: 1px solid #eeeeee;
         }
         aside section a:hover{
-            color: #985d6a;
+            color: black;
             background-color: #efefef;
         }
         a {
-            color: #de6581;
+            color: black;
             text-decoration: none;
         }
         h1, h2, h3 {
             font-weight: normal;
+            color: black;
         }
         h2 {
             margin: 10px 0px 5px 0px;
             padding: 0px;
+            color: #000000;
         }
         h3 {
             margin: 0px 0px 10px 0px;
-            color:#de6581;
+            color:black;
         }
         aside h2 {
             padding: 30px 0px 10px 0px;
-            color:#de6581;
+            color:black;
         }
         footer {
-            font-size:80%;
+            font-size: larger;
             padding: 7px 0px 0px 20px;
+            height: 50px;
+            text-align: center;
+
         }
         img {
             width:100%;
             height: 100%;
+        }
+        p {
+            color: #000000;
         }
 
     </style>
@@ -139,43 +148,44 @@
         <section class="courses">
             <article>
                 <figure>
-                    <img src="images/Lisa.jpeg" alt="">
-                    <figcaption>Lisa</figcaption>
+                    <img src="./images/dog-personality-types-0422.jpeg" alt="">
+                    <figcaption>Border Collie</figcaption>
                 </figure>
                 <hgroup>
-                    <h2>jjjjjjjjjjjj</h2>
-                    <h3>DDDDDDDDDDDDDDDDD</h3>
+                    <h2>In general, Border Collies are medium-sized dogs</h2>
+                    <h3>They have a double coat that varies from smooth to rough and is occasionally curled.</h3>
                 </hgroup>
-                <p>dsfsddddddddddddddddddddddddddddddddddddddd</p>
+                <p>The Border Collie is a British breed of herding dog of medium size.</p>
             </article>
             <article>
                 <figure>
-                    <img src="images/Lisa.jpeg" alt="">
-                    <figcaption>Lisa</figcaption>
+                    <img src="./images/dog2.png" alt="">
+                    <figcaption>Two Border Collies</figcaption>
                 </figure>
                 <hgroup>
-                    <h2>jjjjjjjjjjjj</h2>
+                    <h2>In general, Border Collies are medium-sized dogs</h2>
                     <h3>DDDDDDDDDDDDDDDDD</h3>
                 </hgroup>
-                <p>dsfsddddddddddddddddddddddddddddddddddddddd</p>
+                <p>Widely considered to be the most intelligent dog breed,[1] they are descended from landrace sheepdogs once found all over the British Isles, but became standardised in the Anglo-Scottish border region. They are now mostly used as working dogs to herd livestock, specifically sheep.</p>
             </article>
         </section>
         <aside>
             <section class="popular-recipes">
-                <h2>Popular Recipes</h2>
-                <a href="">dsfdsfsdfsdf</a>
-                <a href="">dsfdsfsdfsdf</a>
-                <a href="">dsfdsfsdfsdf</a>
-                <a href="">dsfdsfsdfsdf</a>
+                <h2>Popular Dogs</h2>
+                <a href="">Border Collie</a>
+                <a href="">Golden Retriever</a>
+                <a href="">Labrador Retriever</a>
+                <a href="">Welsh Corgi Pembroke</a>
             </section>
-            <section class="contact-details">
-                <h2>Contact</h2>
+            <section class="contact-details"r
+                <h2 color="black">Contact</h2>
                 <p>dsdfsdfs</p>
             </section>
         </aside>
-        <footer>
-            Huikun Zheng
-        </footer>
+        
     </div>
+    <footer>
+        Huikun Zheng
+    </footer>
 </body>
 </html>
